--- a/.github/workflows/PhpReleaseDeploy.yml
+++ b/.github/workflows/PhpReleaseDeploy.yml
@@ -1,4 +1,4 @@
-name: CI
+name: PHP Deploy
 
 on:
   push:
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    #- uses: actions/checkout@v2
    # - name: Run a one-line script
     #  run: echo Hello, world!
     #- name: Run a multi-line script
@@ -19,8 +19,8 @@ jobs:
       #  echo Add other actions to build,
        # echo test, and deploy your project.
   
-    - name: Checkout
-      uses: actions/checkout@v2
+    #- name: Checkout
+     # uses: actions/checkout@v2
 
     #- name: Setup PHP
       #uses: shivammathur/setup-php@v1
@@ -33,7 +33,7 @@ jobs:
       uses: SamKirkland/FTP-Deploy-Action@2.0.0
       with:
         # FTP server name (you may need to specify a port)
-        ftp_server: groep05.mediaenvormgeving.nl
+        ftp_server: groep05.mediaenvormgeving.nl:21
         # FTP account username
         ftp_username: groep05@mediaenvormgeving.nl
         # FTP account password
