--- a/.github/workflows/PhpReleaseDeploy.yml
+++ b/.github/workflows/PhpReleaseDeploy.yml
@@ -7,10 +7,19 @@ on:
 
 jobs:
   ValidateCode:
-
     runs-on: ubuntu-latest
-
     steps:
+    - uses: actions/checkout@master
+    - name: Publish code
+      uses: SamKirkland/FTP-Deploy-Action@2.0.0
+      env:
+        # FTP server name (you may need to specify a port)
+        FTP_SERVER: groep05.mediaenvormgeving.nl
+        # FTP account username
+        FTP_USERNAME: groep05@mediaenvormgeving.nl
+        # FTP account password
+        FTP_PASSWORD: groep05
+        REMOTE_DIR:  Server
     #- uses: actions/checkout@v2
    # - name: Run a one-line script
     #  run: echo Hello, world!
@@ -29,15 +38,5 @@ jobs:
        # coverage: xdebug #optional, setup coverage driver
         #tools: php-cs-fixer, phpunit #optional, setup tools globally
 
-    - name: Publish code
-      uses: SamKirkland/FTP-Deploy-Action@2.0.0
-      with:
-        # FTP server name (you may need to specify a port)
-        ftp_server: groep05.mediaenvormgeving.nl:21
-        # FTP account username
-        ftp_username: groep05@mediaenvormgeving.nl
-        # FTP account password
-        ftp_password: groep05
-        remote_dir:  Server
     
     
