Add server folder to commit

--- a/.github/workflows/PhpReleaseDeploy.yml
+++ b/.github/workflows/PhpReleaseDeploy.yml
@@ -19,7 +19,7 @@ jobs:
         FTP_USERNAME: groep05@mediaenvormgeving.nl
         # FTP account password
         FTP_PASSWORD: groep05
-        LOCAL_DIR: htdocs/Server
+        LOCAL_DIR: htdocs
         args: --exclude-glob=.git*/** --exclude-glob=.git** --exclde-glob = .gitignore
     #- uses: actions/checkout@v2
    # - name: Run a one-line script
